# actix_couses_learning_project

./: Cargo.toml
tutor-db/: .env  Cargo.toml  docker-compose.yml
tutor-db/src/: database.sql
tutor-db/src/iter2/: handlers.rs  models.rs  state.rs
tutor-db/src/iter3/: db_access.rs  handlers.rs  models.rs
tutor-db/src/iter4/: db_access.rs  handlers.rs  routes.rs
tutor-db/src/iter5/: errors.rs  routes.rs
tutor-db/src/iter5/dbaccess/: course.rs  tutor.rs
tutor-db/src/iter5/dbscripts/: course.sql  tutor-course.sql
tutor-db/src/iter5/handlers/: course.rs  general.rs  tutor.rs
tutor-db/src/iter5/models/: course.rs  tutor.rs
tutor-db/src/iter5/services/: mod.rs  tutor_service.rs
tutor-nodb/: Cargo.toml
tutor-nodb/src/: handlers.rs  routes.rs  state.rs
tutor-web-app-ssr/: Cargo.toml
tutor-web-app-ssr/static/: index.html  tailwindscss.css
tutor-web-app-ssr/static/iter1/: form.html  list.html  user.html
