[package]
name = "tutor-nodb"
version = "0.1.0"
edition = "2021"
default-run = "tutor-service"

[[bin]]
name = "basic-server"

[[bin]]
name = "tutor-service"

[dependencies]
actix-web = "4.3.1"
actix-rt = "2.8.0"
uuid = {version = "1.4.1", features = ["v4"]}
chrono = {version = "0.4.26", features = ["serde"]}
serde = {version = "1.0.177", features = ["derive"]}