[package]
name = "tutor-web-app-ssr"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.3.1"
actix-files = "0.6.2"
log = "0.4.19"
env_logger = "0.10.0"
dotenv = "0.15.0"
tera = "1.19.0"
serde = {version = "1.0.177", features = ["derive"]}
serde_json = "1.0.104"

[dev-dependencies]
actix-rt = "2.8.0"
cargo-watch = "8.4.0"